adding server handeler