@@ -3,17 +3,18 @@ plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.beryx.jlink' version '2.24.1'
+
 }
 
 group 'com.amg'
-version '1.0-SNAPSHOT'
+
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    junitVersion = '5.8.1'
+    junitVersion = '5.8.2'
 }
 
 sourceCompatibility = '17'
@@ -34,10 +35,10 @@ javafx {
 }
 
 dependencies {
-    implementation('org.controlsfx:controlsfx:11.1.0')
-    implementation('org.kordamp.ikonli:ikonli-javafx:12.2.0')
+    implementation('org.controlsfx:controlsfx:11.1.1')
+    implementation('org.kordamp.ikonli:ikonli-javafx:12.3.0')
     implementation ('com.jfoenix:jfoenix:9.0.10')
-
+    implementation 'org.kordamp.ikonli:ikonli-fluentui-pack:12.3.1'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 }
@@ -50,7 +51,8 @@ jlink {
     imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
-        name = 'app'
+        name = 'clientApp'
+        jvmArgs = ['-Djdk.gtk.version=2']
     }
 }
 
@@ -59,11 +61,14 @@ jlinkZip {
 }
 run {
     jvmArgs = [
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
             "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
-            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-            "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--illegal-access=warn",
+            "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=com.jfoenix"
+,'-Djdk.gtk.version=2'
     ]
+
 }
